[package]
name = "veruna-data"
version = "1.0.0"
edition = "2021"

[dependencies]
veruna-kernel = { version = "1.1.12" }
shaku = { version = "0.6.*" }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print"
], default-features = false }