[package]
name = "veruna-data"
version = "1.0.0"
edition = "2021"
description = "Data module for Veruna project"
license = "MIT OR Apache-2.0"
authors = ["Alexander Averichev <averichev@yandex.ru>"]
keywords = ["veruna", "data"]
repository = "https://github.com/averichev/veruna-data"

[dependencies]
veruna-kernel = { path = "../veruna-kernel" }
shaku = { version = "0.6.*" }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print"
], default-features = false }