[package]
name = "veruna-data"
version = "1.0.1"
edition = "2021"
description = "Data module for Veruna project"
license = "MIT OR Apache-2.0"
authors = ["Alexander Averichev <averichev@yandex.ru>"]
keywords = ["veruna", "data"]
repository = "https://github.com/averichev/veruna-data"

[dependencies]
veruna-kernel = { version = "1.1.15" }
sea-orm = { version = "^0", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print"
], default-features = false }